# CosmWasm-Subscriptions-Contract

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  cw_subscription.wasm
examples/: schema.rs
schema/: cw-subscription.json
schema/raw/: execute.json  query.json  response_to_query_config.json  response_to_query_plan_by_id.json  response_to_query_subscriber.json
src/: contract.rs  error.rs  msg.rs  state.rs
ts/: interaction.ts
