[package]
name = "cw-subscription"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std    = "1.1.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.0"
thiserror = "1.0.58"
